added games list to frontend alowed all origins

--- a/front/index.html
+++ b/front/index.html
@@ -52,6 +52,9 @@
         <div id="player2Name">Dark:</div>
         <div id="tokenPlayer2">Tokens:</div>
     </div>
+    <button id="refresh">refesh game list</button>
+    <div class="games" id="gamelist"></div>
+
   </body>
 
   <script src="script.js"></script>
